// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FluentSideNav render nav bar 1`] = `
<div
  id="sideNavContainer"
>
  <DetailsViewLeftNav
    isNarrowMode={false}
    isSideNavOpen={false}
    selectedPivot={0}
    setNavComponentRef={[Function]}
    setSideNavOpen={null}
    tabStoreData={
      Object {
        "isClosed": false,
      }
    }
  />
</div>
`;

exports[`FluentSideNav render null if tab is closed 1`] = `null`;

exports[`FluentSideNav render side nav 1`] = `
<GenericPanel
  className="leftNavPanel reflow-ui"
  hasCloseButton={false}
  isLightDismiss={true}
  isOpen={false}
  onDismiss={[Function]}
  onRenderHeader={[Function]}
  onRenderNavigation={[Function]}
  onRenderNavigationContent={[Function]}
  type={8}
>
  <DetailsViewLeftNav
    isNarrowMode={true}
    isSideNavOpen={false}
    selectedPivot={0}
    setNavComponentRef={[Function]}
    setSideNavOpen={null}
    tabStoreData={
      Object {
        "isClosed": false,
      }
    }
  />
</GenericPanel>
`;
